# UpSetHeatmap

./: .gitignore  README.md  README.rst  UpSetHeatmap_Tutorial.ipynb  setup.cfg  setup.py  tutorial.ipynb
gallery/: generate_gallery.py
upsetheatmap/: __init__.py  data.py  plotting.py  reformat.py  util.py
upsetheatmap/tests/: test_data.py  test_reformat.py  test_upsetplot.py
