[metadata]
description = Draw heatmaps for intersection sets similar to Lex et al.'s UpSet plots 
long_description = file: README.rst
author = Andreas Tsouris
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering :: Visualization
	Intended Audience :: Science/Research